--- a/docs/courses/小程序封面-七牛图片裁剪.md
+++ b/docs/courses/小程序封面-七牛图片裁剪.md
@@ -1,3 +1,7 @@
+---
+layoutClass: doc-layout
+---
+
 # 小程序封面-七牛图片裁剪
 #### 七牛API
 使用七牛的 [图片高级处理(imageMogr2 )](https://developer.qiniu.com/dora/manual/1270/the-advanced-treatment-of-images-imagemogr2) 接口去实现
