--- a/docs/notes/小程序爬坑.md
+++ b/docs/notes/小程序爬坑.md
@@ -1,3 +1,8 @@
+---
+layoutClass: doc-layout
+---
+
+
 # 小程序爬坑
 
 #### 解密 [getUserInfo](https://developers.weixin.qq.com/miniprogram/dev/api/open-api/user-info/wx.getUserInfo.html) 敏感信息
