--- a/docs/notes/音频可视化.md
+++ b/docs/notes/音频可视化.md
@@ -4,7 +4,7 @@ layoutClass: doc-layout
 
 # 音频可视化
 
-### AudioContext
+### AudioContext {#AudioContext}
 > 包含各个 AudioNode 对象以及它们的联系的对象，可以理解为 audio 上下文对象。（类似于 canvas 的 getContext()）
 > 绝大多数情况下，一个 document 中只能有一个 AudioContext
 
@@ -15,7 +15,7 @@ var ac = new window.AudioContext();
 // 兼容写法
 var ac = new (window.AudioContext || window.webkitAudioContext)();
 ```
-### 属性：
+### 属性 {#属性}
 * ```destination```
 
     > AudioDestinationNode 对象，所有的音频输出聚集地，相当于音频的硬件，所有的 AudioNode 都直接或间接连接到这里
@@ -24,7 +24,7 @@ var ac = new (window.AudioContext || window.webkitAudioContext)();
 
     > AudioContext 从创建开始到当前的时间（秒）
 
-### 方法：
+### 方法 {#方法}
 * ```decodeAudioData(arrayBuffer, succ(buffer), err)```
 
     > 异步解码包含在 arrayBuffer 中的音频数据
@@ -41,7 +41,7 @@ var ac = new (window.AudioContext || window.webkitAudioContext)();
 
     > 创建 GainNode 对象，调节音量
 
-### audioBufferSourceNode 对象
+### audioBufferSourceNode 对象 {#audioBufferSourceNode 对象}
 > 表示内存中的一段音频资源，其音频数据存在于 AudioBuffer 中（其 buffer 属性）
 > 创建：```var buffersource = ac.createBufferSource();```
 
@@ -75,7 +75,7 @@ var ac = new (window.AudioContext || window.webkitAudioContext)();
         ```stop/noteOff(when=ac.currentTime)```
 
 
-### GainNode 对象
+### GainNode 对象 {#GainNode 对象}
 > 改变音频音量的对象，会改变通过它的音频数据所有的 sample frame 的信号强度
 > 创建：```var gainNode = ac.createCain()/ac.createCainNode();```
 
@@ -84,7 +84,7 @@ var ac = new (window.AudioContext || window.webkitAudioContext)();
     AudioParam 对象，通过改变其 ```value``` 值可以改变音频信号的强弱，默认的 ```value``` 属性值为 1，通常最小值为 0，最大值为 1，其 ```value``` 值也可以大于 1，小于 0
 
 
-### AnalyserNode 对象
+### AnalyserNode 对象 {#AnalyserNode 对象}
 > 音频分析对象，它能实时的分析音频资源的频域和时域信息，但不会对音频流做任何处理。
 > 创建：```var analyser = ac.createAnalyser();```
 
@@ -102,7 +102,7 @@ var ac = new (window.AudioContext || window.webkitAudioContext)();
 
         复制音频当前的频域数据（数量是frequencyBinCount）到Unit8Array（8位无符号整型类型化数据组）中
 
-### 最后，看看实现demo（直接查看源码）
+<!-- ### 最后，看看实现demo（直接查看源码） {#最后，看看实现demo（直接查看源码）}
 * [异步请求音频资源](https://www.duminghong.com/demo/music_visual/1.html)
 * [播放请求到的音频资源](https://www.duminghong.com/demo/music_visual/2.html)
 * [控制音频音量](https://www.duminghong.com/demo/music_visual/3.html)
@@ -110,6 +110,8 @@ var ac = new (window.AudioContext || window.webkitAudioContext)();
 * [得到音频频域并图形化出来](https://www.duminghong.com/demo/music_visual/5.html)
 * [实时麦克风](https://www.duminghong.com/demo/music_visual/6.html)
 * [吹一吹测试](https://www.duminghong.com/demo/music_visual/7.html)
-* [歌曲播放器](https://www.duminghong.com/demo/music_visual/8.html) 音频有些大，加载可能比较慢
+* [歌曲播放器](https://www.duminghong.com/demo/music_visual/8.html) 音频有些大，加载可能比较慢 -->
 
-> 注意：实时麦克风得Https
+::: tip
+注意：实时麦克风得Https
+:::
