feat(docs): 新增多篇技术文档并添加技能徽章
新增小程序开发、canvas文本绘制、聊天框表情插入等技术文档
添加HTML5、CSS3、JavaScript等技能徽章图片资源
更新关于我页面使用本地徽章替代远程资源

--- a/docs/works/小程序封面-七牛图片裁剪.md
+++ b/docs/works/小程序封面-七牛图片裁剪.md
@@ -32,7 +32,7 @@ layoutClass: doc-layout
 
 ### 实现代码 {#实现代码}
 
-```url
+```text
 ?imageMogr2/auto-orient/thumbnail/x320/gravity/Center/crop/400x320/format/jpg/quality/100/size-limit/120k
 ```
 
@@ -68,7 +68,7 @@ layoutClass: doc-layout
 
 #### 实现代码 {#实现代码-通用方案}
 
-```url
+```text
 ?imageMogr2/auto-orient/thumbnail/!400x320r/gravity/Center/crop/400x320/format/jpg/quality/100/size-limit/120k
 ```
 
