--- a/docs/works/小程序爬坑.md
+++ b/docs/works/小程序爬坑.md
@@ -20,7 +20,7 @@ layoutClass: doc-layout
 ### [mpvue](https://github.com/Meituan-Dianping/mpvue) 使用 [mpvue-wxparse](https://github.com/F-loat/mpvue-wxParse)  {#mpvue使用mpvue-wxparse}
   ```mpvue-wxparse``` 是解析富文本内容的库
   当前```(2018年12月27日)``` 没有 ES6 转 ES5，需要主动转 ES5，在 ```/build/webpack.base.conf.js``` 里加rules：
-  ```rules
+  ```jaavascript
   {
 	  test: /\.js$/, 
 	  include: [resolve('src'), resolve('test'), /mpvue-wxparse/],
