--- a/docs/works/小程序相关/1.小程序爬坑.md
+++ b/docs/works/小程序相关/1.小程序爬坑.md
@@ -20,7 +20,7 @@ layoutClass: doc-layout
 ### [mpvue](https://github.com/Meituan-Dianping/mpvue) 使用 [mpvue-wxparse](https://github.com/F-loat/mpvue-wxParse)  {#mpvue使用mpvue-wxparse}
   ```mpvue-wxparse``` 是解析富文本内容的库
   当前```(2018年12月27日)``` 没有 ES6 转 ES5，需要主动转 ES5，在 ```/build/webpack.base.conf.js``` 里加rules：
-  ```jaavascript
+  ```javascript
   {
 	  test: /\.js$/, 
 	  include: [resolve('src'), resolve('test'), /mpvue-wxparse/],
@@ -52,9 +52,9 @@ layoutClass: doc-layout
 
 ### ```/u2028```行分隔符，导致响应 json 异常  {#u2028行分隔符导致响应json异常}
 在开发者工具无异常，可正常解析，但是真机解析异常，如图
-![开发者工具会有提示](../assets/img/4853363-eec24a259212a291.png)
+![开发者工具会有提示](../../assets/img/works/weapp/4853363-eec24a259212a291.png)
 
-![使用真机调试](../assets/img/4853363-731c08d87275413f.png)
+![使用真机调试](../../assets/img/works/weapp/4853363-731c08d87275413f.png)
 解决方法：
   + 后端处理：
       在响应的时候替换掉 ```/u2028```
