--- a/docs/works/小程序相关/2.小程序封面-七牛图片裁剪.md
+++ b/docs/works/小程序相关/2.小程序封面-七牛图片裁剪.md
@@ -51,10 +51,10 @@ layoutClass: doc-layout
 ### 效果展示 {#效果展示}
 
 转换前：
-![大小为9.2M](../assets/img/4853363-ffe43d1e723ffe35.png)
+![大小为9.2M](../../assets/img/works/cover/4853363-ffe43d1e723ffe35.png)
 
 转换后：
-![大小为104k](../assets/img/4853363-d132da746c47c5fc.png)
+![大小为104k](../../assets/img/works/cover/4853363-d132da746c47c5fc.png)
 
 ## 优化方案 {#优化方案}
 
@@ -81,10 +81,10 @@ layoutClass: doc-layout
 #### 效果展示 {#效果展示-通用方案}
 
 转换前：
-![747x1328](../assets/img/4853363-eb5154836931bf6e.png)
+![747x1328](../../assets/img/works/cover/4853363-eb5154836931bf6e.png)
 
 转换后：
-![400x320](../assets/img/4853363-3e390c6a18298606.png)
+![400x320](../../assets/img/works/cover/4853363-3e390c6a18298606.png)
 
 ## 问题修复 {#问题修复}
 
