--- a/docs/works/小程序相关/3.小程序canvas文本绘制.md
+++ b/docs/works/小程序相关/3.小程序canvas文本绘制.md
@@ -161,7 +161,7 @@ this.textWrap(details);  // 注意：这里应该是textWrap而不是drawText
 
 ## 基础实现效果 {#基础实现效果}
 
-![生成图片效果](../assets/img/4853363-229d689d5f48c183.jpg)
+![生成图片效果](../../assets/img/works/canvas/4853363-229d689d5f48c183.jpg)
 
 ## 优化方案 {#优化方案}
 
@@ -268,7 +268,7 @@ textWrap: function (obj) {
 
 ### 包含英文字母的文本效果 {#包含英文字母的文本效果}
 
-![有英文字母生成图片效果](../assets/img/4853363-5ac2db4b4860de3a.png)
+![有英文字母生成图片效果](../../assets/img/works/canvas/4853363-5ac2db4b4860de3a.png)
 
 ::: warning
 注：在开发工具中截取圆形会失效，这张是开发者工具生成的，第一张是真机生成的。
@@ -276,7 +276,7 @@ textWrap: function (obj) {
 
 ### 优化前后对比 {#优化前后对比}
 
-![优化前后对比](../assets/img/4853363-0e149e2064817003.png)
+![优化前后对比](../../assets/img/works/canvas/4853363-0e149e2064817003.png)
 
 从对比图可以看出，优化后的实现能够更准确地处理包含英文字符的文本换行，避免了字符被截断或换行位置不准确的问题。
 
@@ -308,7 +308,7 @@ this.ctx.fillText('加粗文本', x, y);
 如果不需要兼容低版本基础库，直接使用 `font` 属性是更好的选择，性能更好且代码更简洁。如果需要兼容低版本库，则使用前面介绍的重复渲染方式。
 :::
 
-## 总结与展望 {#总结与展望}
+## 总结 {#总结}
 
 本文介绍了在小程序canvas中实现文本自动换行和字体加粗的两种方法：
 
@@ -321,7 +321,8 @@ this.ctx.fillText('加粗文本', x, y);
 - 兼容性问题：新API需要较高版本的基础库
 - 功能限制：不支持更复杂的文本排版需求
 
-希望小程序后续能够提供更完善的文本绘制API，如多行文本自动换行、文本样式设置等，以简化开发工作。
 
-## 优化待续... {#优化待续}
+
+---
+> 优化待续...
 
