docs(courses/Promise): 修复微队列链接的文档错误
修复Promise文档中微队列链接指向错误的问题，确保正确指向事件循环章节的微队列部分

--- a/docs/courses/2.Promise/2.手写Promise.md
+++ b/docs/courses/2.Promise/2.手写Promise.md
@@ -183,7 +183,7 @@ class MyPromise {
 }
 ```
 ::: tip 注意：
-ES6的 Promise，状态吸收是放在微队列里的，使用`queueMicrotask`方法可以把任务添加到[微队列]()里去执行。
+ES6的 Promise，状态吸收是放在微队列里的，使用`queueMicrotask`方法可以把任务添加到[微队列](../1.事件循环#微队列)里去执行。
 ```javascript
 queueMicrotask(() => {
   x.then(
