--- a/docs/courses/2.Promise/1.什么是Promise.md
+++ b/docs/courses/2.Promise/1.什么是Promise.md
@@ -55,10 +55,10 @@ config:
 %% 图表主体
 flowchart LR
   %% 定义样式类
-  classDef container fill:#f5f5f5,stroke:#ddd,stroke-width:1px;
-  classDef pendingNode fill:#ffcc00,color:#333,stroke:#cc9900,stroke-width:1.5px;
-  classDef fulfilledNode fill:#66cc66,color:#333,stroke:#339933,stroke-width:1.5px;
-  classDef rejectedNode fill:#ff6666,color:#333,stroke:#cc3333,stroke-width:1.5px;
+  classDef container fill:#f5f5f5,stroke:#ddd,stroke-width:1px,font-weight: bold;
+  classDef pendingNode fill:#ffcc00,color:#333,stroke:#cc9900,stroke-width:1.5px,font-weight: bold;
+  classDef fulfilledNode fill:#66cc66,color:#333,stroke:#339933,stroke-width:1.5px,font-weight: bold;
+  classDef rejectedNode fill:#ff6666,color:#333,stroke:#cc3333,stroke-width:1.5px,font-weight: bold;
 
   subgraph Promise对象
       style Promise对象 container
