docs(Promise): 完善状态吸收机制的执行步骤说明
修改执行解析表格中的步骤描述，为每个步骤添加"同步任务"前缀以更清晰区分同步和异步操作
保持文档结尾内容不变，仅调整格式

--- a/docs/courses/2.Promise/3.状态吸收.md
+++ b/docs/courses/2.Promise/3.状态吸收.md
@@ -265,11 +265,11 @@ promise1.then(() => {
 执行解析：  
 |步骤 |执行任务|行号|执行结果|微队列任务|
 |---------|---------|------|----------|------|
-|1|创建 promise1|1|`Promise {<fulfilled>: 'success'}`|-|
-|2|创建 promise2，准备吸收状态，创建任务到微队列：`准备`|2,3,4|`Promise {<pending>}`|`准备`|
-|3|执行promise2的第一个`then`|6|`pending`状态，等待跳过，继续执行后续同步代码|`准备`|
-|4|执行promise1的第一个`then`|16,17,18|`fulfilled`状态，执行回调函数->创建打印任务`log(4)`|`准备`<br>`log(4)`|
-|5|同步代码执行完毕，取微队列第一个任务`准备`执行|-|创建吸收状态任务`吸收`添加到微队列|`log(4)`<br> `吸收`|
+|1|同步任务：创建 promise1|1|`Promise {<fulfilled>: 'success'}`|-|
+|2|同步任务：创建 promise2，准备吸收状态，创建任务到微队列：`准备`|2,3,4|`Promise {<pending>}`|`准备`|
+|3|同步任务：执行promise2的第一个`then`|6|`pending`状态，等待跳过，继续执行后续同步代码|`准备`|
+|4|同步任务：执行promise1的第一个`then`|16,17,18|`fulfilled`状态，执行回调函数->创建打印任务`log(4)`|`准备`<br>`log(4)`|
+|5|同步任务执行完毕，取微队列第一个任务`准备`执行|-|创建吸收状态任务`吸收`添加到微队列|`log(4)`<br> `吸收`|
 |6|取微队列第一个任务`log(4)`执行|19,20,21|打印`4`，回调完成，执行promise1的第二个`then`，创建打印任务`log(5)`|`吸收`<br>`log(5)`|
 |7|取微队列第一个任务`吸收`执行|-|promise2吸收状态完成，执行promise2的第一个`then`，创建打印任务`log(1)`|`log(5)`<br>`log(1)`|
 |8|取微队列第一个任务`log(5)`执行|22,23,24|打印`5`，回调完成，执行promise1的第三个`then`，创建打印任务`log(6)`|`log(1)`<br>`log(6)`|
