docs(Promise): 添加Promise面试题代码示例和运行步骤
添加一个Promise面试题的代码示例，包含详细的运行步骤说明和模拟执行过程

--- a/docs/courses/2.Promise/4.一些面试题.md
+++ b/docs/courses/2.Promise/4.一些面试题.md
@@ -4,3 +4,206 @@ title: 一些Promise的面试题
 ---
 
 # 一些Promise的面试题
+测试模拟器
+```javascript codeRunTask
+---
+data: {
+  config: {
+    
+  },
+  runSteps: [
+    {
+      id: 1,
+      type: "synchronous",
+      task: "声明全局变量 promise1",
+      taskName: "promise1",
+      createTask: {},
+      codeNumbers: [1],
+      result: "创建全局变量 promise1，调用Promise.resolve('success')，赋值为 Promise {<fulfilled>: 'success'}",
+      console: "",
+      runTime: 1000
+    },
+    {
+      id: 2,
+      type: "synchronous",
+      task: "声明全局变量 promise2",
+      taskName: "promise2",
+      createTask: {},
+      codeNumbers: [2,3,4],
+      result: "创建全局变量 promise2，调用Promise构造函数，返回一个pending状态的Promise对象",
+      console: "",
+      runTime: 1000
+    },
+    {
+      id: 3,
+      type: "synchronous",
+      task: "promise2 准备吸收 promise1 的状态",
+      taskName: "resolve(promise1)",
+      createTask: {
+        type: "microtask",
+        taskId: 6,
+      },
+      codeNumbers: [3],
+      result: '调用 resolve(promise1)，触发promise2的状态解析，处理Promise状态吸收，创建任务到微队列：准备吸收',
+      console: "",
+      runTime: 1000
+    },
+    {
+      id: 4,
+      type: "synchronous",
+      task: "调用promise2的第一个then",
+      taskName: "p2-then1",
+      createTask: {},
+      codeNumbers: [6,7,8],
+      result: "因为promise2仍是pending状态，回调不执行，仅注册，继续执行后续同步代码",
+      console: "",
+      runTime: 1000
+    },
+    {
+      id: 5,
+      type: "synchronous",
+      task: "调用promise1的第一个then",
+      taskName: "p1-then1",
+      createTask: {
+        type: "microtask",
+        taskId: 7,
+      },
+      codeNumbers: [16,17,18],
+      result: "因为promise1已fulfilled，执行promise1的第一个then（p1-then1），创建任务到微队列：log(4)",
+      console: "",
+      runTime: 1000
+    },
+    {
+      id: 6,
+      type: "microtask",
+      task: "同步代码结束，执行任务：准备吸收",
+      taskName: "准备吸收",
+      createTask: {
+        type: "microtask",
+        taskId: 8,
+      },
+      codeNumbers: [3],
+      result: "promise2吸收状态准备阶段完成，创建任务到微队列：吸收状态",
+      console: "",
+      runTime: 1000
+    },
+    {
+      id: 7,
+      type: "microtask",
+      task: "执行任务：log(4)",
+      taskName: "log(4)",
+      createTask: {
+        type: "microtask",
+        taskId: 9,
+      },
+      codeNumbers: [17],
+      result: "p1-then1回调完成，执行promise1的第二个then（p1-then2），创建任务到微队列：log(5)",
+      console: "4",
+      runTime: 1000
+    },
+    {
+      id: 8,
+      type: "microtask",
+      task: "执行任务：吸收状态",
+      taskName: "吸收状态",
+      createTask: {
+        type: "microtask",
+        taskId: 10,
+      },
+      codeNumbers: [3],
+      result: "promise2吸收状态完成，执行p2-then1回调，创建任务到微队列：log(1)",
+      console: "",
+      runTime: 1000
+    },
+    {
+      id: 9,
+      type: "microtask",
+      task: "执行任务：log(5)",
+      taskName: "log(5)",
+      createTask: {
+        type: "microtask",
+        taskId: 11,
+      },
+      codeNumbers: [20],
+      result: "p1-then2回调完成，执行promise1的第三个then（p1-then3），创建任务到微队列：log(6)",
+      console: "5",
+      runTime: 1000
+    },
+    {
+      id: 10,
+      type: "microtask",
+      task: "执行任务：log(1)",
+      taskName: "log(1)",
+      createTask: {
+        type: "microtask",
+        taskId: 12,
+      },
+      codeNumbers: [7],
+      result: "p2-then1回调完成，执行promise2的第二个then（p2-then2），创建任务到微队列：log(2)",
+      console: "1",
+      runTime: 1000
+    },
+    {
+      id: 11,
+      type: "microtask",
+      task: "执行任务：log(6)",
+      taskName: "log(6)",
+      createTask: {},
+      codeNumbers: [23],
+      result: "p1-then3回调完成，promise1调用已完成，执行后续任务",
+      console: "6",
+      runTime: 1000
+    },
+    {
+      id: 12,
+      type: "microtask",
+      task: "执行任务：log(2)",
+      taskName: "log(2)",
+      createTask: {
+        type: "microtask",
+        taskId: 13,
+      },
+      codeNumbers: [10],
+      result: "p2-then2回调完成，执行promise2的第三个then（p2-then3），创建任务到微队列：log(3)",
+      console: "2",
+      runTime: 1000
+    },
+    {
+      id: 13,
+      type: "microtask",
+      task: "执行任务：log(3)",
+      taskName: "log(3)",
+      createTask: {},
+      codeNumbers: [13],
+      result: "p2-then3回调完成，promise2调用已完成，微队列已清空，程序执行完毕",
+      console: "3",
+      runTime: 1000
+    }
+  ]
+}
+---
+const promise1 = Promise.resolve('success');
+const promise2 = new Promise((resolve, reject) => {
+  resolve(promise1);
+});
+
+promise2.then(() => {
+    console.log(1);
+  })
+  .then(() => {
+    console.log(2);
+  })
+  .then(() => {
+    console.log(3);
+  });
+
+promise1.then(() => {
+    console.log(4);
+  })
+  .then(() => {
+    console.log(5);
+  })
+  .then(() => {
+    console.log(6);
+  });
+```
