docs(Promise): 更新Promise面试题文档中的任务描述
修改任务执行结果描述，使其更清晰准确地反映Promise状态变化和微任务队列操作

--- a/docs/courses/2.Promise/4.一些面试题.md
+++ b/docs/courses/2.Promise/4.一些面试题.md
@@ -3,13 +3,15 @@ layoutClass: doc-layout
 title: 一些Promise的面试题
 ---
 
-# 一些Promise的面试题
+# 一些 Promise 的面试题
+
 测试模拟器
+
 ```javascript codeRunTask
 ---
 data: {
   config: {
-    
+
   },
   runSteps: [
     {
@@ -44,7 +46,7 @@ data: {
         taskId: 6,
       },
       codeNumbers: [3],
-      result: '调用 resolve(promise1)，触发promise2的状态解析，处理Promise状态吸收，创建任务到微队列：准备吸收',
+      result: '调用 resolve(promise1)，触发promise2的状态解析，处理Promise状态吸收，创建任务[ 准备吸收 ]到微队列',
       console: "",
       runTime: 2000
     },
@@ -69,7 +71,7 @@ data: {
         taskId: 7,
       },
       codeNumbers: [16,17,18],
-      result: "因为promise1已fulfilled，执行promise1的第一个then（p1-then1），创建任务到微队列：log(4)",
+      result: "因为promise1已fulfilled，执行promise1的第一个then（p1-then1），创建任务[ log(4) ]到微队列",
       console: "",
       runTime: 2000
     },
@@ -83,7 +85,7 @@ data: {
         taskId: 8,
       },
       codeNumbers: [3],
-      result: "promise2吸收状态准备阶段完成，创建任务到微队列：吸收状态",
+      result: "promise2吸收状态准备阶段完成，创建任务[ 吸收状态 ]到微队列",
       console: "",
       runTime: 2000
     },
@@ -97,7 +99,7 @@ data: {
         taskId: 9,
       },
       codeNumbers: [17],
-      result: "p1-then1回调完成，执行promise1的第二个then（p1-then2），创建任务到微队列：log(5)",
+      result: "p1-then1回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行promise1的第二个then（p1-then2），创建任务[ log(5) ]到微队列",
       console: "4",
       runTime: 2000
     },
@@ -111,7 +113,7 @@ data: {
         taskId: 10,
       },
       codeNumbers: [3],
-      result: "promise2吸收状态完成，执行p2-then1回调，创建任务到微队列：log(1)",
+      result: "promise2吸收状态完成，执行p2-then1回调，创建任务[ log(1) ]到微队列",
       console: "",
       runTime: 2000
     },
@@ -125,7 +127,7 @@ data: {
         taskId: 11,
       },
       codeNumbers: [20],
-      result: "p1-then2回调完成，执行promise1的第三个then（p1-then3），创建任务到微队列：log(6)",
+      result: "p1-then2回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行promise1的第三个then（p1-then3），创建任务[ log(6) ]到微队列",
       console: "5",
       runTime: 2000
     },
@@ -139,7 +141,7 @@ data: {
         taskId: 12,
       },
       codeNumbers: [7],
-      result: "p2-then1回调完成，执行promise2的第二个then（p2-then2），创建任务到微队列：log(2)",
+      result: "p2-then1回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行promise2的第二个then（p2-then2），创建任务[ log(2) ]到微队列",
       console: "1",
       runTime: 2000
     },
@@ -164,7 +166,7 @@ data: {
         taskId: 13,
       },
       codeNumbers: [10],
-      result: "p2-then2回调完成，执行promise2的第三个then（p2-then3），创建任务到微队列：log(3)",
+      result: "p2-then2回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行promise2的第三个then（p2-then3），创建任务[ log(3) ]到微队列",
       console: "2",
       runTime: 2000
     },
