--- a/docs/courses/2.Promise/4.一些面试题.md
+++ b/docs/courses/2.Promise/4.一些面试题.md
@@ -21,7 +21,7 @@ data: {
       taskName: "promise1",
       createTask: {},
       codeNumbers: [1],
-      result: "创建全局变量 promise1，调用Promise.resolve('success')，赋值为 Promise {<fulfilled>: 'success'}",
+      result: "创建全局变量 **promise1**，调用Promise.resolve('success')，赋值为 Promise {<fulfilled>: 'success'}",
       console: "",
       runTime: 2000
     },
@@ -32,7 +32,7 @@ data: {
       taskName: "promise2",
       createTask: {},
       codeNumbers: [2,3,4],
-      result: "创建全局变量 promise2，调用Promise构造函数，返回一个pending状态的Promise对象",
+      result: "创建全局变量 **promise2**，调用Promise构造函数，返回一个pending状态的Promise对象",
       console: "",
       runTime: 2000
     },
@@ -46,7 +46,7 @@ data: {
         taskId: 6,
       },
       codeNumbers: [3],
-      result: '调用 resolve(promise1)，触发promise2的状态解析，处理Promise状态吸收，创建任务[ 准备吸收 ]到微队列',
+      result: '调用 **resolve(promise1)**，触发 **promise2** 的状态解析，处理Promise状态吸收，创建任务 `准备吸收` 到微队列',
       console: "",
       runTime: 2000
     },
@@ -57,7 +57,7 @@ data: {
       taskName: "p2-then1",
       createTask: {},
       codeNumbers: [6,7,8],
-      result: "因为promise2仍是pending状态，回调不执行，仅注册，继续执行后续同步代码",
+      result: "因为 **promise2** 仍是pending状态，回调不执行，仅注册，继续执行后续同步代码",
       console: "",
       runTime: 2000
     },
@@ -71,7 +71,7 @@ data: {
         taskId: 7,
       },
       codeNumbers: [16,17,18],
-      result: "因为promise1已fulfilled，执行promise1的第一个then（p1-then1），创建任务[ log(4) ]到微队列",
+      result: "因为 **promise1** 已fulfilled，执行 **promise1** 的第一个then `p1-then1`，创建任务 `log(4)` 到微队列",
       console: "",
       runTime: 2000
     },
@@ -85,7 +85,7 @@ data: {
         taskId: 8,
       },
       codeNumbers: [3],
-      result: "promise2吸收状态准备阶段完成，创建任务[ 吸收状态 ]到微队列",
+      result: "**promise2**吸收状态准备阶段完成，创建任务 `吸收状态` 到微队列",
       console: "",
       runTime: 2000
     },
@@ -99,7 +99,7 @@ data: {
         taskId: 9,
       },
       codeNumbers: [17],
-      result: "p1-then1回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行promise1的第二个then（p1-then2），创建任务[ log(5) ]到微队列",
+      result: "`p1-then1` 回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行 **promise1** 的第二个then `p1-then2`，创建任务 `log(5)` 到微队列",
       console: "4",
       runTime: 2000
     },
@@ -113,7 +113,7 @@ data: {
         taskId: 10,
       },
       codeNumbers: [3],
-      result: "promise2吸收状态完成，执行p2-then1回调，创建任务[ log(1) ]到微队列",
+      result: "**promise2**吸收状态完成，执行 `p2-then1` 回调，创建任务 `log(1)` 到微队列",
       console: "",
       runTime: 2000
     },
@@ -127,7 +127,7 @@ data: {
         taskId: 11,
       },
       codeNumbers: [20],
-      result: "p1-then2回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行promise1的第三个then（p1-then3），创建任务[ log(6) ]到微队列",
+      result: "`p1-then2` 回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行 **promise1** 的第三个then `p1-then3`，创建任务 `log(6)` 到微队列",
       console: "5",
       runTime: 2000
     },
@@ -141,7 +141,7 @@ data: {
         taskId: 12,
       },
       codeNumbers: [7],
-      result: "p2-then1回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行promise2的第二个then（p2-then2），创建任务[ log(2) ]到微队列",
+      result: "`p2-then1` 回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行 **promise2** 的第二个then `p2-then2`，创建任务 `log(2)` 到微队列",
       console: "1",
       runTime: 2000
     },
@@ -152,7 +152,7 @@ data: {
       taskName: "log(6)",
       createTask: {},
       codeNumbers: [23],
-      result: "p1-then3回调完成，promise1调用已完成，执行后续任务",
+      result: "`p1-then3` 回调完成，**promise1**调用已完成，执行后续任务",
       console: "6",
       runTime: 2000
     },
@@ -166,7 +166,7 @@ data: {
         taskId: 13,
       },
       codeNumbers: [10],
-      result: "p2-then2回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行promise2的第三个then（p2-then3），创建任务[ log(3) ]到微队列",
+      result: "`p2-then2` 回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行 **promise2** 的第三个then `p2-then3`，创建任务 `log(3)` 到微队列",
       console: "2",
       runTime: 2000
     },
@@ -177,7 +177,7 @@ data: {
       taskName: "log(3)",
       createTask: {},
       codeNumbers: [13],
-      result: "p2-then3回调完成，promise2调用已完成，微队列已清空，程序执行完毕",
+      result: "`p2-then3` 回调完成，**promise2**调用已完成，微队列已清空，程序执行完毕",
       console: "3",
       runTime: 2000
     }
