docs(courses): 更新Promise面试题文档中的执行流程描述
调整Promise状态解析和then链执行的详细说明，补充缺失的步骤描述

--- a/docs/courses/2.Promise/4.一些面试题.md
+++ b/docs/courses/2.Promise/4.一些面试题.md
@@ -21,7 +21,7 @@ data: {
       taskName: "promise1",
       createTask: {},
       codeNumbers: [1],
-      result: "创建全局变量 **promise1**，调用Promise.resolve('success')，赋值为 Promise {<fulfilled>: 'success'}",
+      result: "创建全局变量 **promise1**，调用Promise.resolve('success')，Promise.resolve内部执行，创建已fulfilled的Promise对象，赋值为 Promise {<fulfilled>: 'success'}",
       console: "",
       runTime: 2000
     },
@@ -32,7 +32,7 @@ data: {
       taskName: "promise2",
       createTask: {},
       codeNumbers: [2,3,4],
-      result: "创建全局变量 **promise2**，调用Promise构造函数，返回一个pending状态的Promise对象",
+      result: "创建全局变量 **promise2**，执行Promise构造函数",
       console: "",
       runTime: 2000
     },
@@ -43,46 +43,56 @@ data: {
       taskName: "resolve(promise1)",
       createTask: {
         type: "microtask",
-        taskId: 6,
+        taskId: 7,
       },
       codeNumbers: [3],
-      result: '调用 **resolve(promise1)**，触发 **promise2** 的状态解析，处理Promise状态吸收，创建任务 `准备吸收` 到微队列',
+      result: '调用 **resolve(promise1)**，resolve检测到参数是Promise，触发 **promise2** 的状态解析，处理Promise状态吸收，返回一个pending状态的Promise对象<br>创建任务 `准备吸收` 到微队列',
       console: "",
       runTime: 2000
     },
     {
       id: 4,
       type: "synchronous",
-      task: "调用promise2的第一个then",
-      taskName: "p2-then1",
+      task: "注册promise2的then链",
+      taskName: "p2注册then回调",
       createTask: {},
-      codeNumbers: [6,7,8],
-      result: "因为 **promise2** 仍是pending状态，回调不执行，仅注册，继续执行后续同步代码",
+      codeNumbers: [6,7,8,10,11,12,13,14],
+      result: "注册then回调：`p2-then1` `p2-then2` `p2-then3`<br>因为 **promise2** 仍是pending状态，回调不执行，仅注册，继续执行后续同步代码",
       console: "",
       runTime: 2000
     },
     {
       id: 5,
       type: "synchronous",
-      task: "调用promise1的第一个then",
-      taskName: "p1-then1",
-      createTask: {
-        type: "microtask",
-        taskId: 7,
-      },
-      codeNumbers: [16,17,18],
-      result: "因为 **promise1** 已fulfilled，执行 **promise1** 的第一个then `p1-then1`，创建任务 `log(4)` 到微队列",
+      task: "注册promise1的then链",
+      taskName: "p1注册then回调",
+      codeNumbers: [16,17,18,19,20,21,22,23,24],
+      result: "注册then回调：`p1-then1` `p1-then2` `p1-then3`<br>因为 **promise1** 已fulfilled，准备执行第一个then回调 `p1-then1`",
       console: "",
       runTime: 2000
     },
     {
       id: 6,
-      type: "microtask",
-      task: "同步代码结束，执行任务：准备吸收",
-      taskName: "准备吸收",
+      type: "synchronous",
+      task: "执行promise1的第一个then回调",
+      taskName: "p1-then1",
       createTask: {
         type: "microtask",
         taskId: 8,
+      },
+      codeNumbers: [16,17,18],
+      result: "执行 **promise1** 的第一个then回调 `p1-then1`，创建任务 `log(4)` 到微队列，同步代码结束。",
+      console: "",
+      runTime: 2000
+    },
+    {
+      id: 7,
+      type: "microtask",
+      task: "执行任务：准备吸收",
+      taskName: "准备吸收",
+      createTask: {
+        type: "microtask",
+        taskId: 9,
       },
       codeNumbers: [3],
       result: "**promise2**吸收状态准备阶段完成，创建任务 `吸收状态` 到微队列",
@@ -90,13 +100,13 @@ data: {
       runTime: 2000
     },
     {
-      id: 7,
+      id: 8,
       type: "microtask",
       task: "执行任务：log(4)",
       taskName: "log(4)",
       createTask: {
         type: "microtask",
-        taskId: 9,
+        taskId: 10,
       },
       codeNumbers: [17],
       result: "`p1-then1` 回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行 **promise1** 的第二个then `p1-then2`，创建任务 `log(5)` 到微队列",
@@ -104,13 +114,13 @@ data: {
       runTime: 2000
     },
     {
-      id: 8,
+      id: 9,
       type: "microtask",
       task: "执行任务：吸收状态",
       taskName: "吸收状态",
       createTask: {
         type: "microtask",
-        taskId: 10,
+        taskId: 11,
       },
       codeNumbers: [3],
       result: "**promise2**吸收状态完成，执行 `p2-then1` 回调，创建任务 `log(1)` 到微队列",
@@ -118,13 +128,13 @@ data: {
       runTime: 2000
     },
     {
-      id: 9,
+      id: 10,
       type: "microtask",
       task: "执行任务：log(5)",
       taskName: "log(5)",
       createTask: {
         type: "microtask",
-        taskId: 11,
+        taskId: 12,
       },
       codeNumbers: [20],
       result: "`p1-then2` 回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行 **promise1** 的第三个then `p1-then3`，创建任务 `log(6)` 到微队列",
@@ -132,13 +142,13 @@ data: {
       runTime: 2000
     },
     {
-      id: 10,
+      id: 11,
       type: "microtask",
       task: "执行任务：log(1)",
       taskName: "log(1)",
       createTask: {
         type: "microtask",
-        taskId: 12,
+        taskId: 13,
       },
       codeNumbers: [7],
       result: "`p2-then1` 回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行 **promise2** 的第二个then `p2-then2`，创建任务 `log(2)` 到微队列",
@@ -146,7 +156,7 @@ data: {
       runTime: 2000
     },
     {
-      id: 11,
+      id: 12,
       type: "microtask",
       task: "执行任务：log(6)",
       taskName: "log(6)",
@@ -157,13 +167,13 @@ data: {
       runTime: 2000
     },
     {
-      id: 12,
+      id: 13,
       type: "microtask",
       task: "执行任务：log(2)",
       taskName: "log(2)",
       createTask: {
         type: "microtask",
-        taskId: 13,
+        taskId: 14,
       },
       codeNumbers: [10],
       result: "`p2-then2` 回调完成，返回undefined，新创建的Promise变为fulfilled状态，执行 **promise2** 的第三个then `p2-then3`，创建任务 `log(3)` 到微队列",
@@ -171,7 +181,7 @@ data: {
       runTime: 2000
     },
     {
-      id: 13,
+      id: 14,
       type: "microtask",
       task: "执行任务：log(3)",
       taskName: "log(3)",
