docs(courses): 统一微任务描述中的"执行任务"为"执行微任务"

--- a/docs/courses/2.Promise/4.一些面试题.md
+++ b/docs/courses/2.Promise/4.一些面试题.md
@@ -78,7 +78,7 @@ data: {
     {
       id: 6,
       type: "microtask",
-      task: "执行任务：准备吸收",
+      task: "执行微任务：准备吸收",
       taskName: "准备吸收",
       createTask: {
         type: "microtask",
@@ -92,7 +92,7 @@ data: {
     {
       id: 7,
       type: "microtask",
-      task: "执行任务：p1-then1",
+      task: "执行微任务：p1-then1",
       taskName: "p1-then1",
       createTask: {
         type: "microtask",
@@ -106,7 +106,7 @@ data: {
     {
       id: 8,
       type: "microtask",
-      task: "执行任务：吸收状态",
+      task: "执行微任务：吸收状态",
       taskName: "吸收状态",
       createTask: {
         type: "microtask",
@@ -120,7 +120,7 @@ data: {
     {
       id: 9,
       type: "microtask",
-      task: "执行任务：p1-then2",
+      task: "执行微任务：p1-then2",
       taskName: "p1-then2",
       createTask: {
         type: "microtask",
@@ -134,7 +134,7 @@ data: {
     {
       id: 10,
       type: "microtask",
-      task: "执行任务：p2-then1",
+      task: "执行微任务：p2-then1",
       taskName: "p2-then1",
       createTask: {
         type: "microtask",
@@ -148,7 +148,7 @@ data: {
     {
       id: 11,
       type: "microtask",
-      task: "执行任务：p1-then3",
+      task: "执行微任务：p1-then3",
       taskName: "p1-then3",
       createTask: {},
       codeNumbers: [23],
@@ -159,7 +159,7 @@ data: {
     {
       id: 12,
       type: "microtask",
-      task: "执行任务：p2-then2",
+      task: "执行微任务：p2-then2",
       taskName: "p2-then2",
       createTask: {
         type: "microtask",
@@ -173,7 +173,7 @@ data: {
     {
       id: 13,
       type: "microtask",
-      task: "执行任务：p2-then3",
+      task: "执行微任务：p2-then3",
       taskName: "p2-then3",
       createTask: {},
       codeNumbers: [13],
